<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnEnable"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/mode_on"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnDisable"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/mode_off"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnRebootNow"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/reboot_now" />

</LinearLayout>
